# centre-ui/src/app/services/models.ts
@@ -10,6 +10,7 @@ export { AddressDto } from './models/address-dto';
 export { AddressRequest } from './models/address-request';
 export { AuthenticationRequest } from './models/authentication-request';
 export { AuthenticationResponse } from './models/authentication-response';
+export { ClassStudentResponse } from './models/class-student-response';
 export { DocumentRegistrationResponse } from './models/document-registration-response';
 export { DocumentRequest } from './models/document-request';
 export { DocumentResponse } from './models/document-response';
@@ -50,7 +51,6 @@ export { SchoolYearResponse } from './models/school-year-response';
 export { Specialty } from './models/specialty';
 export { SpecialtyRequest } from './models/specialty-request';
 export { SpecialtyResponse } from './models/specialty-response';
-export { StudentAcceleratedClassResponse } from './models/student-accelerated-class-response';
 export { StudentAllResponse } from './models/student-all-response';
 export { StudentDetails } from './models/student-details';
 export { StudentDetailsResponse } from './models/student-details-response';
