# centre-ui/src/app/services/models/class-student-response.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface ClassStudentResponse {
+  className?: string;
+  firstName?: string;
+  lastName?: string;
+  phoneNumber?: string;
+  studentId?: number;
+}
