# centre-ui/src/app/services/models/student-accelerated-class-response.ts
@@ -1,7 +1,0 @@
-/* tslint:disable */
-/* eslint-disable */
-export interface StudentAcceleratedClassResponse {
-  firstNameStudent?: string;
-  id?: number;
-  lastNameStudent?: string;
-}
