# centre-ui/src/openApi/openApi.yml
@@ -1413,6 +1413,40 @@
         }
       }
     },
+    "/class/accredited/{classId}/students": {
+      "get": {
+        "tags": [
+          "classe-formation-controller"
+        ],
+        "operationId": "findAllStudentByAccreditedClassId",
+        "parameters": [
+          {
+            "name": "classId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/ClassStudentResponse"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/class/accredited/specialty/{specialtyId}": {
       "get": {
         "tags": [
@@ -1452,7 +1486,7 @@
         "tags": [
           "classe-formation-controller"
         ],
-        "operationId": "findAllStudentAcceleratedClass",
+        "operationId": "findAllStudentByAcceleratedClassId",
         "parameters": [
           {
             "name": "classId",
@@ -1472,7 +1506,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/StudentAcceleratedClassResponse"
+                    "$ref": "#/components/schemas/ClassStudentResponse"
                   }
                 }
               }
@@ -2849,6 +2883,27 @@
           }
         }
       },
+      "ClassStudentResponse": {
+        "type": "object",
+        "properties": {
+          "studentId": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "phoneNumber": {
+            "type": "string"
+          },
+          "className": {
+            "type": "string"
+          }
+        }
+      },
       "AcceleratedClassResponse": {
         "type": "object",
         "properties": {
@@ -2903,21 +2958,6 @@
           },
           "last": {
             "type": "boolean"
-          }
-        }
-      },
-      "StudentAcceleratedClassResponse": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "integer",
-            "format": "int64"
-          },
-          "firstNameStudent": {
-            "type": "string"
-          },
-          "lastNameStudent": {
-            "type": "string"
           }
         }
       },
